@@ -5,10 +5,12 @@ DIST mplayer-uau-1.0_rc4_p20100822.tar.lzma 7289729 RMD160 ef78f9eb6a5a6ea44d5e5
 DIST mplayer-uau-1.0_rc4_p20101126.tar.xz 7248300 RMD160 5ad2f1ea3b8e0bf44b2aac09f51831953ba0675b SHA1 c2aaabd2258c98c611c8a724a75c3cb2d23295c3 SHA256 64582a08dda357d69206de165c4ad699f24b8dfde605018722fddb8ee350d41a
 DIST mplayer-uau-1.0_rc4_p20101220.tar.xz 7258544 RMD160 c78772012d887fbac00de2bedbc341a0cff694a8 SHA1 d6ce3d6b072b59207856e5e013fff903926b2df0 SHA256 7e0925c0654cea9050aa676d98cfda3d8fe28b1fcac8a6cf96bed8e0df6a6dfb
 DIST mplayer-uau-1.0_rc4_p20110126.tar.xz 7298200 RMD160 483d9fbebd3fbba9377c698f7d59aeef7042f7ce SHA1 9b094460e13e0ec5d18da76662ad7a788c47cd30 SHA256 f29741947ef557ac2164d93260c5d675199cc7d11e1a06e7f6ac0a308fa8a2cb
+DIST mplayer2-2.0beta1.tar.xz 7255596 RMD160 0e46907dc4bc74f8fade13a3903f18d180f93c84 SHA1 95ec817bda56464a006bfb809a2edab796ede1ae SHA256 04db7bf482c515f8d01a71d3a6422017139077e576c00045ac3fcb79558ea9ec
 EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b816e2ab418f89ea32a SHA1 d7d057ca95276e370de18e61767033922dc559f8 SHA256 a884674e4da716f691ca1443de2e8bdcb0d4a76a7898dfe395095a4ed2c6563f
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
 EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23254 RMD160 db5bedfd5fb51699259668ad4c92dcbd5de8087a SHA1 3c8341d18ed310e976b4661ba50e25a35edff461 SHA256 ef49cc0be1d84eb6a77438956d43123c1c9ac1c12a019a4ed89308a1536eb9b7
-EBUILD mplayer-uau-9999.ebuild 22751 RMD160 34fc537771bc96d99ef61303e9c1ec7c2af13f98 SHA1 92ddf0f44903dbdbf603f0dddfe434dbec2c9652 SHA256 3e13fa47c5ddf228e347d9e3bd89a4c33391c75624b346532f7de9ae4c4b0765
-MISC ChangeLog 2130 RMD160 99a01593893119e86b160e2bf690ecc6f6960851 SHA1 ed4e82a451d20e1569e7f6e59def17c25d1c07bd SHA256 ca50730e8fbff669c7c013050d15efebf9120a7a92033700f88df7a33dc57e4a
-MISC metadata.xml 4739 RMD160 e2f1220571f2fb983fa04408190449b75a346b6b SHA1 eaf3e0b5ff1b9759b6d4e7233b2f57f42e360bb6 SHA256 5c818b4e3898a2d0d5a8b833f3bab6c15bdd121a10b55c6e1a6e9f34f7e514a4
+EBUILD mplayer-uau-2.0_beta1.ebuild 22416 RMD160 8fe6cb20c54a094b74778493b5a004576ce09fbe SHA1 0053dd2f83797d0a40963fa13a446d4979e6793e SHA256 00ebcc46d323b017c26d6c527e077d4cff990f25312a337eaef6e60fc3a45491
+EBUILD mplayer-uau-9999.ebuild 22378 RMD160 da44d168afd7a6ae9c1e7c78c61eef20ef598132 SHA1 57a8c5c57d257c6c4622f1c15424780cc53f69b5 SHA256 1a0719fb59ceea5598607188ede561186c21f7a38b1fbdf99d75c0423d352ea0
+MISC ChangeLog 2309 RMD160 8f07e10f29f1836cba34eb94c3ec317547b6a8ab SHA1 e5d113e32455584e0e192fa45531e4eb39ca34e6 SHA256 4526cfb8a5b22c9f77540f4a77d2e2da666c34c473c0086673484c238943b25e
+MISC metadata.xml 4858 RMD160 10a74e1afcba1c573e6cb16d32b553c981d8fc1f SHA1 7624093b0e514d8f7dac620071e2bdeec0eb1949 SHA256 eab3c615438c75a8636d34aeddcdefaf781b3d2db0edf01f2a5053ab595f87e5
