@@ -58,6 +58,7 @@
 	<flag name="schroedinger">Enable Dirac video support (an advanced royalty-free video compression format) via libschroedinger (high-speed implementation in C of the Dirac codec).</flag>
 	<flag name="shm">Enable support for shm</flag>
 	<flag name="ssse3">faster floating point optimization for SSSE3 capable chips (Intel Core 2 and later chips)</flag>
+	<flag name="system-ffmpeg">Use shared FFmpeg libraries instead of static bundled ones. May not have ffmpeg-mt.</flag>
 	<flag name="tga">Enables Targa video output</flag>
 	<flag name="toolame">Enable toolame MPEG-2 encoding</flag>
 	<flag name="tremor">Enable internal support for Vorbis</flag>
