@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mplayer-uau-2.0_beta1 (15 Feb 2011)
+
+  15 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_beta1.ebuild,
+  mplayer-uau-9999.ebuild, metadata.xml:
+  add beta1, update live
+
   01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
   upstream removed bz2 and lzo deps
 
